--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "content-list-lazy",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://harshadaYCSM.github.io/contentList",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -33,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
