--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "content-list-lazy",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://harshadaYCSM.github.io/contentList",
+  "homepage": "https://harshadaycsm.github.io/movie-list/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -18,7 +18,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "homepage": "https://harshadaycsm.github.io/movie-list/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
